# apps/api/public/swagger.json
@@ -177,7 +177,11 @@
 						}
 					}
 				},
-				"security": [],
+				"security": [
+					{
+						"": []
+					}
+				],
 				"parameters": []
 			},
 			"post": {
